--- a/css/main.css
+++ b/css/main.css
@@ -337,7 +337,8 @@ a, a:hover, a:focus {
 
 }
 
-.sidebar-catalog-content .caret, .sidebar-title .caret {
+.sidebar-catalog-content .caret,
+.sidebar-title .caret {
     -moz-transition: all 200ms linear;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
@@ -409,9 +410,13 @@ a, a:hover, a:focus {
     text-align: center;
     background: #f5f5f5;
     color: #000000;
-    border-radius: 5px;
-    padding: 5px;
-    margin-bottom: 15px;
+    /*border-radius: 5px;*/
+    padding: 8px;
+    margin-bottom: 40px;
+    font-size: 16px;
+    font-weight: 400;
+    margin-left: -10px;
+    margin-right: -10px;
 }
 
 .home-page-header,
@@ -429,6 +434,17 @@ a, a:hover, a:focus {
 .page-header .button-green.small {
     margin-right: -10px;
     margin-left: -10px;
+}
+
+.qty-filters {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    border-radius: 12px;
+    border: 1px solid #83ae00;
+    margin-left: 5px;
 }
 
 @media (min-width: 767px) {
@@ -577,19 +593,34 @@ a, a:hover, a:focus {
     justify-content: center;
     align-items: center;
     display: flex;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 .сatalog-grid.style-2 .caption {
     background: rgba(0, 0, 0, 0.5);
     color: white;
     width: 100%;
-    text-align: center;
-    padding: 17px 0px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /*padding: 17px 0px;*/
     font-size: 16px;
+    font-weight: 400;
 }
 
 .сatalog-grid.style-2 .caption .link a {
     color: white;
+    font-size: 14px;
+}
+
+.сatalog-grid.style-2 .caption .link {
+    text-align: center;
+}
+
+.сatalog-grid.style-2 .caption .description {
+    text-align: center;
 }
 
 .content dl, .content ol, .content ul {
@@ -687,7 +718,7 @@ a, a:hover, a:focus {
 .grid-item .image img {
     width: 100%;
     object-fit: cover;
-    height: 200px;
+    /*height: 200px;*/
 
 }
 
@@ -712,6 +743,7 @@ a, a:hover, a:focus {
     color: #000000;
     line-height: 1.2;
     font-size: 13px;
+    font-weight: 400;
 }
 
 .grid-item .params p {
@@ -870,11 +902,11 @@ a, a:hover, a:focus {
 }
 
 .page-item.first .page-link {
-    margin-right: 0;
+    margin-last: 0;
 }
 
 .page-item.last .page-link {
-    margin-left: 0;
+    margin-right: 0;
 }
 
 .page-item.first span:before {
@@ -1342,6 +1374,18 @@ a, a:hover, a:focus {
     background-image: -ms-linear-gradient( 90deg, rgb(107,143,0) 0%, rgb(115,153,0) 33%, rgb(122,163,0) 100%);
 }
 
+.page-item.last .page-link {
+    margin-left: 0;
+}
+
+.page-item.first .page-link {
+    margin-right: 0;
+}
+
+.mt--4 {
+    margin-top: -4px !important;
+}
+
 /* Responsive */
 
 @media (max-width: 768px) {
@@ -1412,8 +1456,18 @@ a, a:hover, a:focus {
 
     .media img {
         margin-bottom: 15px;
-        margin-right: auto !important;
-        margin-left: auto !important;
+        /*margin-right: auto !important;*/
+        /*margin-left: auto !important;*/
+        width: 100%;
+        margin-bottom: 28px;
+    }
+
+    .posts .media .h5 {
+        font-size: 18px;
+    }
+
+    .posts .description {
+        margin-bottom: 20px;
     }
 
     .sidebar-catalog-content {
@@ -1444,6 +1498,55 @@ a, a:hover, a:focus {
     }
     #partners {
         /*width: 320px;*/
+    }
+    .page-link {
+        margin-left: 7px;
+        margin-right: 7px;
+    }
+
+    .post-thumbnail {
+        margin-bottom: 35px;
+    }
+    .post-content h1, .post-content h2 {
+        font-size: 18px;
+    }
+    .page.pb-90 {
+        padding-bottom: 30px;
+    }
+
+    .post-thumbnail > img {
+        width: 100%;
+    }
+    .sidebar-catalog-list {
+        padding-right: 0;
+    }
+    .grid-item .image img {
+        /*padding-right: 40px;*/
+        /*padding-left: 40px;*/
+    }
+    .grid.pl-sm-40 {
+        padding-left: 40px;
+    }
+    .grid.pr-sm-40 {
+        padding-right: 40px;
+    }
+    .grid-item .caption {
+        font-size: 16px;
+        font-weight: 400;
+        padding-top: 6px;
+        padding-bottom: 20px;
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .h200img .grid-item .image img {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    nav.pt-75 {
+        padding-top: 0px;
+    }
+    .image-container {
+        margin-bottom: 35px;
     }
 }
 
@@ -1541,10 +1644,13 @@ a, a:hover, a:focus {
         justify-content: space-between;
     }
 
+    .page.pb-90 {
+        padding-bottom: 60px;
+    }
+
     /*.home-page  .top-timetable{*/
         /*margin-right: 70px;*/
     /*}*/
-
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
@@ -1567,6 +1673,35 @@ a, a:hover, a:focus {
     .slick-slider .slide {
         height: 108px;
         width: 108px;
+    }
+
+    .media > img {
+        width: 236px;
+    }
+    .posts .description {
+        margin-bottom: 16px;
+    }
+    .posts .media {
+        margin-bottom: 40px;
+    }
+    .page-header .button-green.small {
+        margin: 0 auto;
+    }
+    .hor-sm-center {
+        justify-content: center;
+    }
+    .сatalog-grid.style-2 {
+        height: 157px;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    .сatalog-grid.style-2 .caption {
+        /*padding-top: 10px;*/
+        line-height: 1.3;
+        font-weight: 400;
+    }
+    .сatalog-grid.style-2 .caption .link {
+        margin-top: 10px !important;
     }
 
 }
@@ -1641,7 +1776,7 @@ a, a:hover, a:focus {
     .page .page-title {
         font-size: 24px;
         padding-top: 30px;
-        padding-bottom: 30px;
+        padding-bottom: 35px;
     }
 
     .section-title {
