--- a/css/main.css
+++ b/css/main.css
@@ -1200,7 +1200,7 @@ a, a:hover, a:focus {
 
 /* modal */
 .custom-modal .modal-content {
-    padding: 25px;
+    padding: 25px 25px 28px;
     text-align: center;
     border-radius: 0px;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
@@ -1208,24 +1208,31 @@ a, a:hover, a:focus {
 }
 
 .custom-modal .modal-dialog {
-    max-width: 400px;
+    max-width: 390px;
 }
 
 .custom-modal .modal-content-title {
-    font-size: 16px;
+    font-size: 18px;
     font-family: "Roboto";
     color: rgb(0, 0, 0);
     font-weight: bold;
     line-height: 1.625;
 }
 
+.custom-modal .modal-content-info {
+    font-size: 14px;
+    padding-top: 8px;
+    line-height: 1.714;
+}
+
 .custom-modal .phone-mask {
     text-align: center;
     border: 1px solid #ccc;
-    margin: 20px auto;
-    width: calc(100% - 60px);
-    padding: 10px 15px;
+    margin: 23px auto 31px;
+    width: calc(100% - 68px);
+    padding: 8px 15px;
     border-radius: 50px;
+    font-size: 14px;
 }
 
 .custom-modal .phone-mask:focus {
@@ -1241,16 +1248,31 @@ a, a:hover, a:focus {
     border-radius: 50px;
     display: inline-block;
     min-width: initial;
-    width: 100px;
-    padding: 5px 10px;
+    width: 120px;
+    padding: 4px 10px;
     margin: auto;
     transition: all 200ms ease;
+    font-size: 14px;
 }
 
 .custom-modal .button-measurer:hover {
     background: rgb(130, 174, 0);
     color: white;
 
+}
+
+.custom-modal.modal-mess .modal-content-info {
+    font-size: 18px;
+    line-height: 1.5556;
+}
+
+.custom-modal.modal-mess .modal-content {
+    padding-top: 40px !important;
+    padding-bottom: 60px !important;
+}
+
+.custom-modal.modal-mess .modal-content-info {
+    margin-bottom: 30px;
 }
 
 .slick-dots {display: none !important;}
@@ -1372,6 +1394,16 @@ a, a:hover, a:focus {
     background-image: -moz-linear-gradient( 90deg, rgb(107,143,0) 0%, rgb(115,153,0) 33%, rgb(122,163,0) 100%);
     background-image: -webkit-linear-gradient( 90deg, rgb(107,143,0) 0%, rgb(115,153,0) 33%, rgb(122,163,0) 100%);
     background-image: -ms-linear-gradient( 90deg, rgb(107,143,0) 0%, rgb(115,153,0) 33%, rgb(122,163,0) 100%);
+}
+
+.wrap-large-button-top-banner {
+    width: 100%;
+
+}
+.wrap-large-button-top-banner .large-button {
+    width: 100%;
+    font-size: 20px;
+    text-align: center;
 }
 
 .page-item.last .page-link {
@@ -1590,6 +1622,39 @@ a, a:hover, a:focus {
 
 }
 
+@media (max-width: 576px) {
+    .custom-modal .modal-dialog {
+        max-width: 300px;
+        margin: 40px auto;
+    }
+    .custom-modal .modal-content-title {
+        font-size: 16px;
+    }
+    .custom-modal .modal-content {
+        padding: 24px 12px 28px;
+    }
+    .custom-modal .modal-content-info {
+        padding-top: 12px;
+    }
+    .custom-modal .phone-mask {
+        margin: 13px auto 20px;
+        width: 240px;
+    }
+    .custom-modal.modal-mess .modal-content-info {
+        font-size: 16px;
+        line-height: 1.625;
+    }
+
+    .custom-modal.modal-mess .modal-content {
+        padding-top: 15px !important;
+        padding-bottom: 35px !important;
+    }
+
+    .custom-modal.modal-mess .modal-content-info {
+        margin-bottom: 20px;
+    }
+}
+
 @media (min-width: 768px) {
 
     .container {
@@ -1703,7 +1768,11 @@ a, a:hover, a:focus {
     .сatalog-grid.style-2 .caption .link {
         margin-top: 10px !important;
     }
-
+    .wrap-large-button-top-banner .large-button {
+        font-size: 18px !important;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
 
 @media (max-width: 991px) {
