--- a/css/menu.css
+++ b/css/menu.css
@@ -10,7 +10,7 @@
     background: transparent;
     border: none;
     margin: 12px 0px;
-    margin-left: 20px;
+    margin-left: 40px;
 }
 
 #cssmenu ul,
@@ -150,16 +150,13 @@
 #cssmenu ul ul ul {
     padding-top: 0px;
     padding-left: 10px;
-}
-
-#cssmenu ul ul ul {
     margin-left: 100%;
-    top: 5px;
+    top: 0;
 }
 
 #cssmenu ul ul li a {
     /*border-bottom: 1px solid rgba(150, 150, 150, 0.15);*/
-    padding: 12px 69px 12px 30px;
+    padding: 13px 69px 13px 30px;
     width: auto;
     font-size: 16px;
     text-decoration: none;
@@ -233,11 +230,65 @@ html.md-less #mobilemenu.collapse.show {
     }
 
     #mobilemenu > li {
-        background-color: #37477d;
-        margin-left: -10px;
+        background-color: #314070;
+        /*margin-left: -10px;*/
         max-width: 290px;
     }
+    #mobilemenu > li > a {
+        padding-left: 30px !important;
+        padding-right: 30px !important;
+    }
+    #mobilemenu .has-sub .active > a {
+        color: #bec7e6;
+    }
+    #cssmenu > ul > li.active > a {
+        background: #314070 !important;
+    }
 
+    #cssmenu > ul > li.active:not(.has-sub-level-1) > a {
+        color: #bec7e6 !important;
+    }
+
+    #mobilemenu > li > ul {
+        left: 30px !important;
+        /*top: 40px !important;*/
+        width: 290px !important;
+        position: absolute !important;
+        box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
+    }
+    #mobilemenu > li.active > ul {
+        display: block !important;
+    }
+    #mobilemenu > li > ul > li.active > ul {
+        display: block !important;
+    }
+    #mobilemenu > li > ul > li.active li.active > a {
+        color: #bec7e6 !important;
+    }
+    #mobilemenu > li.has-sub-level-1 > a::after {
+        position: absolute;
+        top: 16px;
+        right: 36px;
+        background-image: url(../images/icons/menu.png);
+        background-repeat: no-repeat;
+        width: 7px;
+        height: 12px;
+        display: block;
+        content: '';
+        transform: rotateZ(90deg);
+        -webkit-transition: all .25s ease;
+        -ms-transition: all .25s ease;
+        transition: all .25s ease;
+    }
+    #cssmenu ul ul li a {
+        white-space: normal;
+        line-height: 1.5;
+    }
+
+    #cssmenu ul ul {
+        padding-top: 0;
+        position: relative;
+    }
     .navigation .container {
         max-width: 100%;
         padding: 0;
@@ -311,7 +362,7 @@ html.md-less #mobilemenu.collapse.show {
     }
 
     #cssmenu ul ul, #cssmenu ul ul ul {
-        position: relative;
+        /*position: relative;*/
         left: 0;
         width: 100%;
         margin: 0;
@@ -392,19 +443,36 @@ html.md-less #mobilemenu.collapse.show {
 
 @media (min-width: 768px) {
     #cssmenu > ul > li:hover{
+        /*background: #2c3963;*/
+    }
+    #cssmenu > ul > li > a:focus,
+    #cssmenu > ul > li.active > a{
         background: #2c3963;
+        color: #ffffff !important;
     }
     #cssmenu ul ul li.has-sub:hover,
     #cssmenu ul li.has-sub ul li.has-sub ul li:hover {
         background: #2c3963 !important;
     }
+    #cssmenu ul ul li.has-sub {
+        position: relative;
+    }
     #cssmenu ul ul li:hover {
         background: #2c3963 !important;
+    }
+    #cssmenu ul ul li:first-child {
+        padding-top: 6px;
+        border-radius: 10px 10px 0 0;
+    }
+    #cssmenu ul ul li:last-child {
+        border-radius: 0 0 10px 10px;
+        padding-bottom: 6px;
     }
     #cssmenu > ul > li > ul:before {
         display: block;
         content: '';
-        height: 20px;
+        /*height: 20px;*/
+        height: 0;
         background-color: #37477d;
         border-radius: 10px 10px 0 0;
     }
@@ -412,7 +480,8 @@ html.md-less #mobilemenu.collapse.show {
     #cssmenu > ul > li > ul:after {
         display: block;
         content: '';
-        height: 20px;
+        /*height: 20px;*/
+        height: 0;
         background-color: #37477d;
         border-radius: 0 0 10px 10px;
     }
@@ -420,7 +489,8 @@ html.md-less #mobilemenu.collapse.show {
     #cssmenu > ul > li > ul > li > ul:before {
         display: block;
         content: '';
-        height: 17px;
+        /*height: 20px;*/
+        height: 0;
         background-color: #2c3963;
         border-radius: 10px 10px 0 0;
     }
@@ -428,7 +498,7 @@ html.md-less #mobilemenu.collapse.show {
     #cssmenu > ul > li > ul > li > ul:after {
         display: block;
         content: '';
-        height: 17px;
+        /*height: 17px;*/
         background-color: #2c3963;
         border-radius: 0 0 10px 10px;
     }
